# agbledo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: dataset.yaml  model.yaml
data/processed/: data_summary.csv
notebooks/: 00_preparation.ipynb  01_exploration.ipynb  02_preprocessing.ipynb  03_training.ipynb  04_formal-evaluation.ipynb
src/data/: colab_data.py  preprocessing.py  utils.py
tests/: test_preprocessing.py
